package net.vyhnal.homework.model;

/**
 * Attribute definition (e.g. "color", "size", ...) without a specific value.
 */
public record Attribute(String name) {
}