package net.vyhnal.homework.model;

/**
 * Item category, e.g. "t-shirts"
 */
public record Category(String name) {
}