package net.vyhnal.homework.model;

/**
 * Assigns a value (e.g. red) to an attribute (e.g. color).
 */
public record ConfigurationValue(Attribute attribute, String value) {
}
